--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Заголовок 1</h1>
+    <section id="about">
+    <h1>Раздел "о нас"</h1>
+    <p><span> ЛАЛАЛА</span></p>
+</section>
 </body>
 </html>
